--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   auto_route: ^9.3.0+1
   get_it: ^8.0.3
   talker_flutter: ^4.6.3
+  flutter_launcher_icons: ^0.14.3
   
 
 dev_dependencies:
@@ -56,7 +57,10 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon.png"
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -67,8 +71,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+  
     - .env
-  #   - images/a_dot_ham.jpeg
+    - assets/icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
