--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   path_provider: ^2.1.5
   equatable: ^2.0.7
   permission_handler: ^12.0.0+1
+  connectivity_plus: ^6.1.4
   
 
 dev_dependencies:
